<resources>
    <string name="app_name">Package Tracker</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_pkg_description">Package Description</string>
    <string name="login_activity">Login</string>
    <string name="user_activity">User Page</string>
    <string name="postmen_activity">Postmen Page</string>
    <string name="staff_activity">Staff Page</string>
    <string name="staff_dashboard_activity">Staff Dashboard</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_button">back button</string>
    <string name="option_menu_button">option menu button</string>
    <string name="toolbar">Toolbar</string>
    <string name="logout">Logout</string>
    <string name="search_package">Search Package</string>
    <string name="add_new_package">Add New Package</string>
    <string name="save_package">Save Package</string>
    <string name="hint_pkg_address">Package Delivery Address</string>
    <string name="search_customer">Search Customer</string>
    <string name="package_id">Package ID</string>
    <string name="address">Address: </string>
    <string name="card_expand">Card Expand</string>
    <string name="status_date">status date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owner_id">Owner Id :</string>
    <string name="deliver_address">Deliver Address :</string>
    <string name="description">Description :</string>
    <string name="current_status">Current Status :</string>
    <string name="selectstatus">SelectStatus</string>
    <string name="select_status">Select Status</string>
    <string name="update">Update</string>
    <string name="single_package_view">Single Package View</string>
    <string name="postmen_dashboard">Postmen Dashboard</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="user_registration">User Registration</string>
    <string name="registration">Registration</string>
    <string name="register">register</string>
    <string name="hint_cn_password">Re-enter Password</string>
    <string name="new_user_register">New users? Register here.</string>
</resources>