<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".UserRegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:startIconContentDescription="username icon"
        app:startIconDrawable="@drawable/ic_user">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:fontFamily="sans-serif-medium"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:endIconMode="password_toggle"
        app:startIconContentDescription="password icon"
        app:startIconDrawable="@drawable/ic_password">

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_cn_password"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/txt_cn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:fontFamily="sans-serif-medium"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textSize="20sp" />

</LinearLayout>